connection string change

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGO_URI="mongodb://127.0.0.1:27017/nikestore"
+# MONGO_URI="mongodb://127.0.0.1:27017/nikestore"
+MONGO_URI = "mongodb+srv://nasrishifar:Nasrishifar@cluster0.eqr56.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET=mysecretkey
 PORT=5000
